[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/FogOfWar.gd" type="Script" id=1]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("FogViewport")

[node name="FogOfWar" type="Node2D"]
script = ExtResource( 1 )

[node name="FogViewport" type="Viewport" parent="."]
size = Vector2( 800, 600 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 0
gui_disable_input = true

[node name="VisionPainter" type="Node2D" parent="FogViewport"]

[node name="FogTexture" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="draw" from="FogViewport/VisionPainter" to="." method="_on_FogVisionPainter_draw"]
